--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "actioncable": "5.0.0",
     "axios": "0.13.1",
     "classnames": "2.2.5",
+    "express": "^4.15.2",
     "lodash": "4.14.1",
     "material-ui": "0.15.4",
     "moment": "2.14.1",
