--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.1",
   "private": true,
   "devDependencies": {
+    "create-react-class": "^15.5.2",
     "react-scripts": "0.2.0"
   },
   "dependencies": {
